<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <com.huika.cloud.views.ClearableEditText
        android:id="@+id/auth_name_edt"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="#ffffff"
        android:hint="@string/authentication_name"
        android:textColorHint="@color/common_edit_hint_color"
        android:textColor="@color/common_text_color"
        android:textSize="12sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/common_divider" />

    <com.huika.cloud.views.ClearableEditText
        android:id="@+id/auth_cardid_edt"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:maxLength="18"
        android:background="#ffffff"
        android:textColorHint="@color/common_edit_hint_color"
        android:hint="@string/authentication_cardid"
        android:digits="@string/verify_char"
        android:textColor="@color/common_text_color"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
         android:layout_marginLeft="10dp"
        android:background="@color/common_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/upload_cardid"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/img_card_face"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/img_card_oppositee"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>
 <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/common_text_color"
        android:gravity="center_vertical|right"
        android:text="认证后身份信息将不可修改" 
        android:textSize="10sp"/>
    <Button
        android:id="@+id/auth_card_sure_btn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="103dp"
        android:background="@drawable/conner_button"
        android:gravity="center"
        android:text="@string/common_sure"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    

</LinearLayout>