<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <ImageView
            android:id="@+id/iv_name_update"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <com.huika.cloud.views.ClearableEditText
            android:id="@+id/up_old_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_name_update"
            android:background="@null"
            android:digits="@string/user_login_char"
            android:gravity="center_vertical"
            android:hint="@string/update_str_old_pwd"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/common_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <ImageView
            android:id="@+id/iv_pwd_update"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <com.huika.cloud.views.ClearableEditText
            android:id="@+id/up_new_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_pwd_update"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/update_str_new_pwd"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/common_divider" />

    <Button
        android:id="@+id/up_pwd_btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/conner_button"
        android:gravity="center"
        android:text="@string/common_sure"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_up_pwd_tophone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/update_str_phone_pwd"
        android:textColor="@color/common_text_color"
        android:textSize="12sp" />

</LinearLayout>