<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingRight="12dp" >

            <TextView
                android:id="@+id/iv_name"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="12dp"
                android:text="手机号"
                android:textSize="15sp"
                android:visibility="visible" />

            <com.huika.cloud.views.ClearableEditText
                android:id="@+id/login_edit_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_name"
                android:background="@null"
                android:digits="@string/user_login_char"
                android:gravity="center_vertical"
                android:hint="@string/login_username_hint"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="@color/common_edit_hint_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/common_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:paddingRight="12dp" >

            <TextView
                android:id="@+id/iv_pwd"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="12dp"
                android:text="@string/login_pwd"
                android:textSize="15sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_pwd"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_pwd_length"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="@color/common_edit_hint_color"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_show_login_pwd"
                style="@style/FindPwdCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:text="" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/common_divider" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/conner_button"
        android:gravity="center"
        android:text="@string/common_login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/tv_findPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/find_login_pwd"
            android:textColor="@color/common_bg_cart_money"
            android:textSize="13sp" />
    </RelativeLayout>

</LinearLayout>