<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/cart_empty_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eff0f2"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/no_cart_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/hkloud_cart_emptytv"
                android:textColor="#787878"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/hkloud_cart_pick"
                android:textColor="#969696"
                android:textSize="12sp" 
                android:visibility="gone"/>

            <TextView
                android:id="@+id/go_shopping_tv"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/conner_button"
                android:gravity="center"
                android:text="@string/hkloud_goshop"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_login_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#eff0f2"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/nologin_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="温馨提示：您还未登录，请前往登陆" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/conner_button"
            android:gravity="center"
            android:text="@string/common_login"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cover_view_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_gray"
        android:visibility="gone">

        <com.zhoukl.androidRDP.RdpViews.RdpCommViews.RdpListView
            android:id="@+id/lv_cart_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="55dp"
            android:cacheColorHint="#00000000"
            android:listSelector="#00000000" >
        </com.zhoukl.androidRDP.RdpViews.RdpCommViews.RdpListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/cart_num_bg" >

            <Button
                android:id="@+id/all_checked_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/cart_product_all_selector"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/hkloud_cart_allselect"
                android:textColor="#333333"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/all_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/all_checked_cb"
                android:gravity="center_vertical"
                android:text="@string/hkloud_cart_alldelete"
                android:textColor="#333333"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/cart_all_money"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_all_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:text="合计：00.00"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_type_shipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/tv_all_money"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/hkloud_cart_poststory"
                    android:textSize="10sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/conner_button"
                android:text="@string/hkloud_cart_caculate"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>